(lang dune 3.8)

(using melange 0.1)

(name remix-reason)

(license "MIT")

(maintainers Paul Bacchus)

(authors Paul Bacchus)

(homepage https://github.com/psb/remix-reason)

(bug_reports https://github.com/psb/remix-reason/issues)

(package
 (allow_empty)
 (name remix-reason)
 (synopsis "Remix and Reason")
 (description "Remix and Reason"))
